<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ED05828F"
    tools:context=".fragment2">

    <TextView
        android:id="@+id/txtNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="56dp"
        android:text="@string/Next"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/rvrsButton"
        android:layout_width="117dp"
        android:layout_height="54dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="48dp"
        android:text="@string/send_message"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="114dp"
        android:layout_height="27dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="12dp"
        android:text="@string/slideshow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fwdButton" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="0dp"
        android:layout_height="27dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:text="@string/galleryView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvrsButton" />

    <Button
        android:id="@+id/fwdButton"
        android:layout_width="117dp"
        android:layout_height="54dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="12dp"
        android:text="@string/nextButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtPrevious"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="28dp"
        android:text="@string/txtPrevious"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
